[package]
name = "generate-oms-key-candidates"
version = "0.1.0"
edition = "2021"
authors = ["Felix Stürmer"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.7.5"
block-modes = "0.8.1"
hex-literal = "0.3.4"
hex = "0.4.3"
rayon = "1.5.1"
clap = { version = "3.0.7", features = ["derive"] }

[profile.release]
lto = "fat"
codegen-units = 1
